--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: Create tag
-      - uses: actions/github-scripts@v3
+        uses: actions/github-scripts@v3
       env:
         TAG: ${{ github.ref_name }}
       with:
