--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Create tag
-        uses: actions/github-scripts@v3
+        uses: actions/github-script@v3
         env:
           TAG: ${{ github.ref_name }}
         with:
