--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -8,7 +8,9 @@ on:
 permissions:
   id-token: write
   contents: read
-
+  issues: write
+  pull-requests: write
+  
 jobs:
   create-tag:
     runs-on: ubuntu-latest
