--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -15,11 +15,10 @@ jobs:
   create-tag:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code and setup node
-        uses: actions/checkout@v3
-        uses: actions/setup-node@v3
-          with:
-            node-version: 16
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Create tag
         uses: actions/github-script@v3
         env:
