--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -20,9 +20,9 @@ jobs:
         with:
           node-version: 16
       - name: Create tag
-        uses: actions/setup-node@v3
-          with:
-            node-version: 16
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
         uses: actions/github-script@v3
         env:
           TAG: ${{ github.ref_name }}
