--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -15,15 +15,17 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      id: set-tag
+      run: echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
       - uses: actions/github-script@v3
         env:
-          TAG: ${{ github.ref }}
+          TAG: ${{ steps.set-tag.outputs.tag_name }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/${{ github.ref }}",
+              ref: "refs/tags/${{ steps.set-tag.outputs.tag_name }}",
               sha: context.sha
             })
