--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -15,8 +15,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      id: set-tag
-      run: echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+      - name: Set tag
+        id: set-tag
+        run: echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
       - uses: actions/github-script@v3
         env:
           TAG: ${{ steps.set-tag.outputs.tag_name }}
