--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Set tag
         id: set-tag
-        run: echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+        run: echo ::set-output name=SOURCE_TAG:$(git describe --tags --abbrev=0)
       - name: Create tag
         uses: actions/checkout@v3
         uses: actions/setup-node@v3
