--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 16
       - name: Set tag
-        run: echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
+        run: echo "GIT_TAG=`echo $(git tag | sort --version-sort | tail -n1)`" >> $GITHUB_ENV
       - uses: actions/github-script@v3
         env:
           TAG: ${{ env.GIT_TAG }}
