--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -21,7 +21,10 @@ jobs:
           CURRENT_TAG=$(echo $(git describe --tags --abbrev=0))
           CURRENT_TAG=$(echo $(git describe --tags --abbrev=0)) >> "$GITHUB_ENV"
           echo $CURRENT_TAG
+          NEXT_TAG=$(echo $CURRENT_TAG | awk  '{$NF += 1 ; print}') >> "$GITHUB_ENV"
+          echo $NEXT_TAG
       - name: Create new tag
         run: |
           echo ${{env.CURRENT_TAG}}
+          echo $CURRENT_TAG
           echo "NEXT_TAG=$(echo $CURRENT_TAG | awk  '{$NF += 1 ; print}')" >> "$GITHUB_ENV"
