--- a/.github/workflows/tag-master.yaml
+++ b/.github/workflows/tag-master.yaml
@@ -21,12 +21,12 @@ jobs:
           CURRENT_TAG=$(echo $(git describe --tags --abbrev=0))
           CURRENT_TAG=$(echo $(git describe --tags --abbrev=0)) >> "$GITHUB_ENV"
           echo $CURRENT_TAG
-          NEXT_TAG=$(echo $CURRENT_TAG | awk  '{$NF += 1 ; print}') >> "$GITHUB_ENV"
-          NEXT_TAG=$(echo $CURRENT_TAG | awk  '{$NF += 1 ; print}')
+          NEXT_TAG=$(echo $CURRENT_TAG | awk -F. '{$NF += 1 ; print $1"."$2"."$3}') >> "$GITHUB_ENV"
+          NEXT_TAG=$(echo $CURRENT_TAG | awk -F. '{$NF += 1 ; print $1"."$2"."$3}')
           echo $NEXT_TAG
-          echo $CURRENT_TAG
+          ${{env.NEXT_TAG}}
       - name: Create new tag
         run: |
-          echo ${{env.CURRENT_TAG}}
+          echo ${{env.NEXT_TAG}}
           echo $CURRENT_TAG
           echo "NEXT_TAG=$(echo $CURRENT_TAG | awk  '{$NF += 1 ; print}')" >> "$GITHUB_ENV"
